--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -10,6 +10,7 @@
 	<h1>Bem-vindo ao Eventex</h1>
 	<p>O evento mais sensacional do ano depois do Dev in Rio!</p>
     </div>
+    <!-- Teste, introduzido por Márcio. -->
 </body>
 </html>
 
